--- a/app/src/main/res/layout/activity_join_part2.xml
+++ b/app/src/main/res/layout/activity_join_part2.xml
@@ -60,9 +60,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/box_white"
-        android:hint="@string/user_email"
+        android:background="@drawable/box_input_text"
         android:padding="15dp"
+        android:textColor="@color/black"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/textview_sendCertification"
         app:layout_constraintTop_toBottomOf="@id/textview_sendCertification" />
 
