--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -7,39 +7,70 @@
     android:background="@color/black"
     tools:context=".ui.login.LandingActivity">
 
-    <TextView
-        android:id="@+id/text_welcome1"
+    <LinearLayout
+        android:id="@+id/layout_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosanskr_bold"
-        android:includeFontPadding="false"
-        android:text="@string/text_welcome1"
-        android:textColor="@color/white"
-        android:textFontWeight="700"
-        android:textSize="38sp"
-        android:bufferType="spannable"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintVertical_bias="0.25">
 
-    <TextView
-        android:id="@+id/text_welcome2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/notosanskr_bold"
-        android:includeFontPadding="false"
-        android:text="@string/text_welcome2"
-        android:textColor="@color/white"
-        android:textFontWeight="700"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.243"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_welcome1" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosanskr_bold"
+                android:includeFontPadding="false"
+                android:text="뚝딱"
+                android:textColor="@color/main_theme_blue"
+                android:textFontWeight="700"
+                android:textSize="38sp"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/notosanskr_bold"
+                android:includeFontPadding="false"
+                android:text="하실"
+                android:textColor="@color/white"
+                android:textFontWeight="700"
+                android:textSize="38sp"
+                tools:ignore="HardcodedText" />
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/notosanskr_bold"
+            android:includeFontPadding="false"
+            android:text="준비 되셨나요?"
+            android:textColor="@color/white"
+            android:textFontWeight="700"
+            android:textSize="38sp"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/notosanskr_bold"
+            android:includeFontPadding="false"
+            android:text="@string/text_welcome2"
+            android:textColor="@color/white"
+            android:textFontWeight="700"
+            android:textSize="14sp" />
+
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/img_button_regular"
@@ -51,31 +82,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_welcome2" />
+        app:layout_constraintTop_toBottomOf="@id/layout_welcome" />
 
     <ImageButton
         android:id="@+id/img_button_google"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
         android:src="@drawable/ic_button_google"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_button_regular"
-        android:background="@android:color/transparent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/img_button_regular" />
 
     <ImageButton
         android:id="@+id/img_button_kakao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
         android:src="@drawable/ic_button_kakao"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_button_google"
-        android:background="@android:color/transparent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/img_button_google" />
 
     <TextView
         android:id="@+id/text_welcome3"
@@ -91,7 +120,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img_button_kakao" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
