--- a/app/src/main/res/drawable/switch_thumb.xml
+++ b/app/src/main/res/drawable/switch_thumb.xml
@@ -3,8 +3,8 @@
     android:shape="oval">
     <solid android:color="#ffffff" />
     <stroke
-        android:width="3dp"
-        android:color="#d9d9d9" />
+        android:width="5dp"
+        android:color="@android:color/transparent" />
     <size android:width="30dp"
         android:height="30dp" />
 </shape>
