[CHORE] 버튼 이름 변경 (-> DefaultButton)

--- a/app/src/main/res/layout/activity_join_part1.xml
+++ b/app/src/main/res/layout/activity_join_part1.xml
@@ -82,7 +82,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_certificationCode"
-        style="@style/TtuckTtakButton"
+        style="@style/DefaultButton"
         android:layout_width="318dp"
         android:layout_height="wrap_content"
         android:enabled="false"
