--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="TtuckTtakButton" parent="Widget.AppCompat.Button">
-        <item name="android:textColor">@color/btn_basic_text_color</item>
-        <item name="android:background">@drawable/btn_basic</item>
+    <style name="DefaultButton" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">@color/selector_default_button_text_color</item>
+        <item name="android:background">@drawable/selector_default_button</item>
         <item name="android:fontFamily">@font/noto_sans_bold</item>
         <item name="android:textSize">18sp</item>
     </style>
