--- a/app/src/main/res/layout/activity_join_part2.xml
+++ b/app/src/main/res/layout/activity_join_part2.xml
@@ -132,7 +132,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_certification"
-        style="@style/TtuckTtakButton"
+        style="@style/DefaultButton"
         android:layout_width="318dp"
         android:layout_height="wrap_content"
         android:text="@string/certification"
