--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -168,7 +168,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_join"
-        style="@style/TtuckTtakButton"
+        style="@style/DefaultButton"
         android:layout_width="318dp"
         android:layout_height="wrap_content"
         android:text="@string/join"
