--- a/app/src/main/res/layout/dialog_agree_terms.xml
+++ b/app/src/main/res/layout/dialog_agree_terms.xml
@@ -90,7 +90,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_start"
-        style="@style/TtuckTtakButton"
+        style="@style/DefaultButton"
         android:layout_width="318dp"
         android:layout_height="56dp"
         android:layout_marginTop="20dp"
