--- a/app/src/main/res/layout/activity_problem_category.xml
+++ b/app/src/main/res/layout/activity_problem_category.xml
@@ -51,6 +51,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="16dp"
             android:background="@drawable/bg_rectangle_round"
+            android:backgroundTint="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -88,6 +89,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="16dp"
             android:background="@drawable/bg_rectangle_round"
+            android:backgroundTint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/button_power_prob"
             app:layout_constraintTop_toTopOf="parent">
@@ -126,6 +128,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="16dp"
             android:background="@drawable/bg_rectangle_round"
+            android:backgroundTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button_power_prob">
@@ -164,6 +167,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="16dp"
             android:background="@drawable/bg_rectangle_round"
+            android:backgroundTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/button_use_prob"
@@ -225,6 +229,7 @@
         app:layout_constraintTop_toBottomOf="@id/group_button"
         app:layout_constraintVertical_bias="0.8" />
 
+    <!--  Todo: design 문제, stroke 있는 버튼으로 변경  -->
     <Button
         android:id="@+id/button_ask"
         android:layout_width="match_parent"
