--- a/app/src/main/res/layout/activity_problem_yn.xml
+++ b/app/src/main/res/layout/activity_problem_yn.xml
@@ -66,6 +66,7 @@
             android:layout_height="470dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/bg_rectangle_round"
+            android:backgroundTint="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -187,6 +188,7 @@
             android:layout_height="470dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/bg_rectangle_round"
+            android:backgroundTint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/button_y"
             app:layout_constraintTop_toTopOf="parent">
