--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -13,6 +13,7 @@
         android:layout_width="318dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_rectangle_round"
+        android:backgroundTint="@color/white"
         android:text="@string/start"
         android:textColor="@color/main_theme_blue"
         android:textSize="18sp"
